fix the gap in hero-header div

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,14 @@ li img{
     text-align: center;
     top: 0;
 }
-
+/* hero-patch element hides the small gap that sometimes appears after hero-header div */
+.hero-patch{
+    position: relative;
+    width: 100%;
+    height: 2%;
+    top: -1%;
+    background-color: #e5ebed;
+}
 .hero-logo {
     margin: 0%;
     position: relative;
